# sona-plugin

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  TESTING_GUIDE.md
Plugin/: CMakeLists.txt
Plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugin/ui/: .env.example  IMPLEMENTATION.md  INTEGRATION.md  SUPABASE.md  index.html  package.json  tailwind.config.js
Plugin/ui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
Plugin/ui/src/components/: AudioGenerationExample.tsx  AudioPreview.tsx  AuthExample.tsx  GenerateButton.tsx  ModeSelector.tsx  PromptInput.tsx  StatusBar.tsx
Plugin/ui/src/lib/: bridge.ts  supabase.ts
Plugin/ui/src/lib/api/: jobs.ts
Plugin/ui/src/lib/hooks/: index.ts  use-jobs.ts  useSupabase.ts
Plugin/ui/src/types/: jobs.ts
audio-worker/: .dockerignore  Dockerfile  QUICKSTART.md  validate-config.js
audio-worker/src/: config.ts  index.ts  logger.ts  stable-audio.ts
edge-functions/: .env.example  types.ts
edge-functions/examples/: react-integration.ts
edge-functions/generate/: index.ts
notes/: basic.txt
output/: .gitkeep
scripts/: README.md  package.json  stable-audio.js
service-worker/: .env.example  .gitignore  DEPLOYMENT.md  README.md  fly.toml  package.json
service-worker/src/: audio-processor.ts  stable-audio.ts  supabase.ts  types.ts  worker.ts
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/functions/: DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  deno.json
supabase/functions/examples/: test-examples.sh
supabase/functions/generate/: index.ts
supabase/migrations/: 20251226_add_audio_urls.sql  20251226_create_jobs_table.sql
